syntax = "proto3";

package book;

option go_package = "github.com/OshakbayAigerim/book_service/proto/bookpb;bookpb";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string genre = 4;
  string language = 5;
  string description = 6;
  float rating = 7;
  float price = 8;
  int32 pages = 9;
  string published_date = 10;
}

message Empty {}
message BookResponse { Book book = 1; }
message BookList { repeated Book books = 1; }
message BookID { string id = 1; }

message CreateBookRequest { Book book = 1; }
message UpdateBookRequest { Book book = 1; }

message GenreRequest { string genre = 1; }
message AuthorRequest { string author = 1; }
message LanguageRequest { string language = 1; }
message SearchRequest { string keyword = 1; }


service BookService {
  rpc CreateBook(CreateBookRequest) returns (BookResponse);
  rpc GetBook(BookID) returns (BookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (BookResponse);
  rpc DeleteBook(BookID) returns (Empty);

  rpc ListAllBooks(Empty) returns (BookList);
  rpc ListBooksByGenre(GenreRequest) returns (BookList);
  rpc ListBooksByAuthor(AuthorRequest) returns (BookList);
  rpc ListBooksByLanguage(LanguageRequest) returns (BookList);
  rpc SearchBooks(SearchRequest) returns (BookList);
  rpc ListTopRatedBooks(Empty) returns (BookList);
  rpc ListNewArrivals(Empty) returns (BookList);
  rpc RecommendBooks(BookID) returns (BookList);
}
